# back/src/contexts/book/infrastructure/book.routes.ts
@@ -5,5 +5,6 @@ export function bookRoutes(controller: BookController): Router {
     const router = Router();
     router.get("/", controller.getBooks.bind(controller));
     router.post("/", controller.postBook.bind(controller));
+    router.get("/:id", controller.getBook.bind(controller));
     return router;
 }
